[workspace]
members = [
  "crates/*",
  "primitives",
  "parachain",
  "parachain/runtime/*",
  "rpc",
]

resolver = "2"

# disable incremental compilation to work around a compiler bug.
# See https://blog.rust-lang.org/2021/05/10/Rust-1.52.1.html
# When we upgrade compiler versions, we may be able to reenable incremental.
[profile.test]
incremental = false

[profile.dev]
incremental = false

[profile.release]
incremental = false
[patch."https://github.com/paritytech/substrate"]
binary-merkle-tree = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
frame-benchmarking = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
frame-benchmarking-cli = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
frame-election-provider-support = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
frame-executive = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
frame-remote-externalities = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
frame-support = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
frame-support-procedural = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
frame-support-procedural-tools = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
frame-support-procedural-tools-derive = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
frame-system = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
frame-system-benchmarking = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
frame-try-runtime = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
mmr-gadget = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
mmr-rpc = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
pallet-asset-tx-payment = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
pallet-assets = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
pallet-aura = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
pallet-authority-discovery = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
pallet-authorship = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
pallet-babe = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
pallet-bags-list = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
pallet-balances = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
pallet-beefy = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
pallet-beefy-mmr = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
pallet-bounties = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
pallet-child-bounties = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
pallet-collective = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
pallet-conviction-voting = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
pallet-democracy = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
pallet-election-provider-multi-phase = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
pallet-election-provider-support-benchmarking = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
pallet-elections-phragmen = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
pallet-fast-unstake = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
pallet-grandpa = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
pallet-identity = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
pallet-im-online = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
pallet-indices = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
pallet-membership = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
pallet-mmr = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
pallet-multisig = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
pallet-nis = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
pallet-nomination-pools = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
pallet-nomination-pools-benchmarking = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
pallet-nomination-pools-runtime-api = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
pallet-offences = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
pallet-offences-benchmarking = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
pallet-preimage = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
pallet-proxy = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
pallet-ranked-collective = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
pallet-recovery = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
pallet-referenda = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
pallet-scheduler = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
pallet-session = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
pallet-session-benchmarking  = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
pallet-society = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
pallet-staking = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
pallet-staking-reward-curve = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
pallet-staking-reward-fn = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
pallet-staking-runtime-api = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
pallet-state-trie-migration = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
pallet-sudo = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
pallet-timestamp = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
pallet-tips = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
pallet-transaction-payment = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
pallet-treasury = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
pallet-utility = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
pallet-vesting = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
pallet-whitelist = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
sc-authority-discovery = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
sc-basic-authorship = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
sc-block-builder = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
sc-chain-spec = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
sc-cli = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
sc-client-api = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
sc-client-db = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
sc-consensus = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
sc-consensus-aura = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
sc-consensus-babe = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
sc-consensus-babe-rpc = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
sc-consensus-beefy = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
sc-consensus-epochs = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
sc-consensus-grandpa = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
sc-consensus-grandpa-rpc = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
sc-consensus-manual-seal = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
sc-consensus-slots = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
sc-executor = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
sc-executor-common = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
sc-executor-wasmtime = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
sc-informant = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
sc-keystore = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
sc-network = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
sc-network-common = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
sc-network-gossip = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
sc-network-light = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
sc-network-sync = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
sc-network-transactions = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
sc-offchain = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
sc-rpc = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
sc-rpc-api = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
sc-rpc-server = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
sc-service = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
sc-storage-monitor = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
sc-sync-state-rpc = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
sc-sysinfo = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
sc-telemetry = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
sc-tracing = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
sc-transaction-pool = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
sc-transaction-pool-api = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
sc-utils = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
sp-api = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
sp-application-crypto = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
sp-arithmetic = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
sp-authority-discovery = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
sp-block-builder = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
sc-consensus-beefy-rpc = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
sp-blockchain = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
sp-consensus = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
sp-consensus-aura = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
sp-consensus-babe = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
sp-consensus-beefy = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
sp-consensus-grandpa = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
sp-consensus-slots = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
sp-core = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
sp-debug-derive = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
sp-externalities = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
sp-inherents = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
sp-io = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
sp-keyring = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
sp-keystore = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
sp-maybe-compressed-blob = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
sp-mmr-primitives = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
sp-npos-elections = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
sp-offchain = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
sp-rpc = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
sp-runtime = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
sp-runtime-interface = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
sp-runtime-interface-proc-macro = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
sp-session = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
sp-staking = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
sp-state-machine = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
sp-std = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
sp-storage = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
sp-timestamp = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
sp-tracing = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
sp-transaction-pool = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
sp-trie = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
sp-version = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
sp-wasm-interface = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
sp-weights = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
substrate-build-script-utils = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
substrate-state-trie-migration-rpc = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
substrate-test-client = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
substrate-wasm-builder = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
try-runtime-cli = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
pallet-glutton = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
sp-database = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
pallet-message-queue = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
pallet-contracts = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }
pallet-contracts-primitives = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v1.0.0" }

[patch."https://github.com/paritytech/polkadot"]
kusama-runtime = { git = "https://github.com/paritytech//polkadot", branch = "release-v1.0.0" }
kusama-runtime-constants = { git = "https://github.com/paritytech//polkadot", branch = "release-v1.0.0" }
pallet-xcm = { git = "https://github.com/paritytech//polkadot", branch = "release-v1.0.0" }
pallet-xcm-benchmarks = { git = "https://github.com/paritytech//polkadot", branch = "release-v1.0.0" }
polkadot-cli = { git = "https://github.com/paritytech//polkadot", branch = "release-v1.0.0" }
polkadot-core-primitives = { git = "https://github.com/paritytech//polkadot", branch = "release-v1.0.0" }
polkadot-network-bridge = { git = "https://github.com/paritytech//polkadot", branch = "release-v1.0.0" }
polkadot-node-core-av-store = { git = "https://github.com/paritytech//polkadot", branch = "release-v1.0.0" }
polkadot-node-core-pvf = { git = "https://github.com/paritytech//polkadot", branch = "release-v1.0.0" }
polkadot-node-metrics = { git = "https://github.com/paritytech//polkadot", branch = "release-v1.0.0" }
polkadot-node-network-protocol = { git = "https://github.com/paritytech//polkadot", branch = "release-v1.0.0" }
polkadot-node-primitives = { git = "https://github.com/paritytech//polkadot", branch = "release-v1.0.0" }
polkadot-node-subsystem = { git = "https://github.com/paritytech//polkadot", branch = "release-v1.0.0" }
polkadot-node-subsystem-util= { git = "https://github.com/paritytech//polkadot", branch = "release-v1.0.0" }
polkadot-overseer = { git = "https://github.com/paritytech//polkadot", branch = "release-v1.0.0" }
polkadot-parachain = { git = "https://github.com/paritytech//polkadot", branch = "release-v1.0.0" }
polkadot-primitives = { git = "https://github.com/paritytech//polkadot", branch = "release-v1.0.0" }
polkadot-rpc = { git = "https://github.com/paritytech//polkadot", branch = "release-v1.0.0" }
polkadot-runtime = { git = "https://github.com/paritytech//polkadot", branch = "release-v1.0.0" }
polkadot-runtime-common = { git = "https://github.com/paritytech//polkadot", branch = "release-v1.0.0" }
polkadot-runtime-constants = { git = "https://github.com/paritytech//polkadot", branch = "release-v1.0.0" }
polkadot-runtime-parachains = { git = "https://github.com/paritytech//polkadot", branch = "release-v1.0.0" }
polkadot-service = { git = "https://github.com/paritytech//polkadot", branch = "release-v1.0.0" }
polkadot-statement-table = { git = "https://github.com/paritytech//polkadot", branch = "release-v1.0.0" }
polkadot-test-runtime = { git = "https://github.com/paritytech//polkadot", branch = "release-v1.0.0" }
polkadot-test-service = { git = "https://github.com/paritytech//polkadot", branch = "release-v1.0.0" }
rococo-runtime = { git = "https://github.com/paritytech//polkadot", branch = "release-v1.0.0" }
test-runtime-constants = { git = "https://github.com/paritytech//polkadot", branch = "release-v1.0.0" }
tracing-gum = { git = "https://github.com/paritytech//polkadot", branch = "release-v1.0.0" }
westend-runtime = { git = "https://github.com/paritytech//polkadot", branch = "release-v1.0.0" }
xcm = { git = "https://github.com/paritytech//polkadot", branch = "release-v1.0.0" }
xcm-builder = { git = "https://github.com/paritytech//polkadot", branch = "release-v1.0.0" }
xcm-executor = { git = "https://github.com/paritytech//polkadot", branch = "release-v1.0.0" }
xcm-simulator = { git = "https://github.com/paritytech//polkadot", branch = "release-v1.0.0" }
polkadot-node-core-runtime-api = { git = "https://github.com/paritytech//polkadot", branch = "release-v1.0.0" }
polkadot-node-collation-generation = { git = "https://github.com/paritytech//polkadot", branch = "release-v1.0.0" }
polkadot-collator-protocol = { git = "https://github.com/paritytech//polkadot", branch = "release-v1.0.0" }
polkadot-availability-recovery = { git = "https://github.com/paritytech//polkadot", branch = "release-v1.0.0" }

[patch."https://github.com/paritytech/cumulus"]
cumulus-client-collator = { git = "https://github.com/paritytech//cumulus", branch = "polkadot-v1.0.0" }
cumulus-client-cli = { git = "https://github.com/paritytech//cumulus", branch = "polkadot-v1.0.0" }
cumulus-client-consensus-aura = { git = "https://github.com/paritytech//cumulus", branch = "polkadot-v1.0.0" }
cumulus-client-consensus-common = { git = "https://github.com/paritytech//cumulus", branch = "polkadot-v1.0.0" }
cumulus-client-consensus-relay-chain = { git = "https://github.com/paritytech//cumulus", branch = "polkadot-v1.0.0" }
cumulus-client-network = { git = "https://github.com/paritytech//cumulus", branch = "polkadot-v1.0.0" }
cumulus-client-service = { git = "https://github.com/paritytech//cumulus", branch = "polkadot-v1.0.0" }
cumulus-pallet-aura-ext = { git = "https://github.com/paritytech//cumulus", branch = "polkadot-v1.0.0" }
cumulus-pallet-dmp-queue = { git = "https://github.com/paritytech//cumulus", branch = "polkadot-v1.0.0" }
cumulus-pallet-parachain-system  = { git = "https://github.com/paritytech//cumulus", branch = "polkadot-v1.0.0" }
cumulus-pallet-xcm = { git = "https://github.com/paritytech//cumulus", branch = "polkadot-v1.0.0" }
cumulus-pallet-xcmp-queue = { git = "https://github.com/paritytech//cumulus", branch = "polkadot-v1.0.0" }
cumulus-primitives-core = { git = "https://github.com/paritytech//cumulus", branch = "polkadot-v1.0.0" }
cumulus-primitives-parachain-inherent = { git = "https://github.com/paritytech//cumulus", branch = "polkadot-v1.0.0" }
cumulus-primitives-timestamp = { git = "https://github.com/paritytech//cumulus", branch = "polkadot-v1.0.0" }
cumulus-primitives-utility = { git = "https://github.com/paritytech//cumulus", branch = "polkadot-v1.0.0" }
cumulus-relay-chain-inprocess-interface = { git = "https://github.com/paritytech//cumulus", branch = "polkadot-v1.0.0" }
cumulus-relay-chain-interface = { git = "https://github.com/paritytech//cumulus", branch = "polkadot-v1.0.0" }
cumulus-relay-chain-minimal-node = { git = "https://github.com/paritytech//cumulus", branch = "polkadot-v1.0.0" }
cumulus-relay-chain-rpc-interface = { git = "https://github.com/paritytech//cumulus", branch = "polkadot-v1.0.0" }
cumulus-test-relay-sproof-builder = { git = "https://github.com/paritytech//cumulus", branch = "polkadot-v1.0.0" }
cumulus-test-relay-validation-worker-provider = { git = "https://github.com/paritytech//cumulus", branch = "polkadot-v1.0.0" }
parachain-info = { git = "https://github.com/paritytech//cumulus", branch = "polkadot-v1.0.0" }
parachains-common  = { git = "https://github.com/paritytech//cumulus", branch = "polkadot-v1.0.0" }
xcm-emulator = { git = "https://github.com/paritytech//cumulus", branch = "polkadot-v1.0.0" }

[patch."https://github.com/open-web3-stack/open-runtime-module-library"]
orml-asset-registry = { git = "https://github.com/open-web3-stack//open-runtime-module-library", rev = "f7c8b38cdc0fa6dddf915a20d2ccf6ae4ad5cac5" }
orml-oracle = { git = "https://github.com/open-web3-stack//open-runtime-module-library", rev = "f7c8b38cdc0fa6dddf915a20d2ccf6ae4ad5cac5" }
orml-tokens = { git = "https://github.com/open-web3-stack//open-runtime-module-library", rev = "f7c8b38cdc0fa6dddf915a20d2ccf6ae4ad5cac5" }
orml-traits = { git = "https://github.com/open-web3-stack//open-runtime-module-library", rev = "f7c8b38cdc0fa6dddf915a20d2ccf6ae4ad5cac5" }
orml-unknown-tokens = { git = "https://github.com/open-web3-stack//open-runtime-module-library", rev = "f7c8b38cdc0fa6dddf915a20d2ccf6ae4ad5cac5" }
orml-utilities = { git = "https://github.com/open-web3-stack//open-runtime-module-library", rev = "f7c8b38cdc0fa6dddf915a20d2ccf6ae4ad5cac5" }
orml-vesting = { git = "https://github.com/open-web3-stack//open-runtime-module-library", rev = "f7c8b38cdc0fa6dddf915a20d2ccf6ae4ad5cac5" }
orml-xcm-support = { git = "https://github.com/open-web3-stack//open-runtime-module-library", rev = "f7c8b38cdc0fa6dddf915a20d2ccf6ae4ad5cac5" }
orml-xcm = { git = "https://github.com/open-web3-stack//open-runtime-module-library", rev = "f7c8b38cdc0fa6dddf915a20d2ccf6ae4ad5cac5" }
orml-xtokens = { git = "https://github.com/open-web3-stack//open-runtime-module-library", rev = "f7c8b38cdc0fa6dddf915a20d2ccf6ae4ad5cac5" }

[patch."https://github.com/paritytech/frontier"]
fc-consensus = { git = "https://github.com/paritytech//frontier", branch = "polkadot-v1.0.0" }
fc-db = { git = "https://github.com/paritytech//frontier", branch = "polkadot-v1.0.0" }
fc-mapping-sync = { git = "https://github.com/paritytech//frontier", branch = "polkadot-v1.0.0" }
fc-rpc = { git = "https://github.com/paritytech//frontier", branch = "polkadot-v1.0.0" }
fc-rpc-core = { git = "https://github.com/paritytech//frontier", branch = "polkadot-v1.0.0" }
fc-storage = { git = "https://github.com/paritytech//frontier", branch = "polkadot-v1.0.0" }
# Frontier Primitive
fp-account = { git = "https://github.com/paritytech//frontier", branch = "polkadot-v1.0.0" }
fp-consensus = { git = "https://github.com/paritytech//frontier", branch = "polkadot-v1.0.0" }
fp-ethereum = { git = "https://github.com/paritytech//frontier", branch = "polkadot-v1.0.0" }
fp-evm = { git = "https://github.com/paritytech//frontier", branch = "polkadot-v1.0.0" }
fp-rpc = { git = "https://github.com/paritytech//frontier", branch = "polkadot-v1.0.0" }
fp-self-contained = { git = "https://github.com/paritytech//frontier", branch = "polkadot-v1.0.0" }
fp-storage = { git = "https://github.com/paritytech//frontier", branch = "polkadot-v1.0.0" }
# Frontier FRAME
pallet-base-fee = { git = "https://github.com/paritytech//frontier", branch = "polkadot-v1.0.0" }
pallet-ethereum = { git = "https://github.com/paritytech//frontier", branch = "polkadot-v1.0.0" }
pallet-evm = { git = "https://github.com/paritytech//frontier", branch = "polkadot-v1.0.0" }
pallet-evm-chain-id = { git = "https://github.com/paritytech//frontier", branch = "polkadot-v1.0.0" }
pallet-evm-precompile-modexp = { git = "https://github.com/paritytech//frontier", branch = "polkadot-v1.0.0" }
pallet-evm-precompile-sha3fips = { git = "https://github.com/paritytech//frontier", branch = "polkadot-v1.0.0" }
pallet-evm-precompile-simple = { git = "https://github.com/paritytech//frontier", branch = "polkadot-v1.0.0" }
